tests/ui/errors/snapshots/iterate_on_impl_method.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[iterate]` not on enum
   ╭─[test.lis:5:3]
 4 │ impl Widget {
 5 │   #[iterate]
   ·   ─────┬────
   ·        ╰── no variants to iterate here
 6 │   fn build() -> int {
   ╰────
  help: Only an enum can be marked `#[iterate]` · code: [attribute.iterate_not_an_enum]
