tests/ui/errors/snapshots/iterate_on_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[iterate]` not on enum
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterate]
   · ─────┬────
   ·      ╰── no variants to iterate here
 3 │ struct Point { x: int, y: int }
   ╰────
  help: Only an enum can be marked `#[iterate]` · code: [attribute.iterate_not_an_enum]
