tests/ui/errors/snapshots/iterate_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[iterate]` not on enum
   ╭─[test.lis:3:3]
 2 │ struct Config {
 3 │   #[iterate]
   ·   ─────┬────
   ·        ╰── no variants to iterate here
 4 │   value: int,
   ╰────
  help: Only an enum can be marked `#[iterate]` · code: [attribute.iterate_not_an_enum]
