tests/ui/errors/snapshots/iterate_variant_named_variants.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterate]` conflicts with existing `variants`
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterate]
   · ─────┬────
   ·      ╰── would synthesize `variants`
 3 │ enum Color {
 4 │   Red,
 5 │   variants,
   ·   ────┬───
   ·       ╰── `variants` already defined here
 6 │ }
   ╰────
  help: Rename the existing `variants`, or drop `#[iterate]` · code: [attribute.iterate_variants_conflict]
