tests/ui/errors/snapshots/lex_binary_imaginary.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid imaginary literal
   ╭─[test.lis:1:9]
 1 │ let x = 0b10i
   ·         ──┬──
   ·           ╰── binary imaginary literals are not supported
   ╰────
  help: Use decimal notation for imaginary literals, e.g. `16i` instead of `0x10i` · code: [lex.non_decimal_imaginary]
