tests/ui/errors/snapshots/lex_binary_missing_digits.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid binary literal
   ╭─[test.lis:1:9]
 1 │ let x = 0b
   ·         ─┬
   ·          ╰── expected digits after `0b`
   ╰────
  help: Add binary digits after `0b`, e.g. `0b1010` or `0b1111_0000` · code: [lex.number_missing_binary_digits]
